tests/samples/negative/generics/generic_enum_result_partial_inference.ax
module generic_enum_result_partial_inference;

enum Result<T, E>: u8 {
    ok(T) = 1,
    err(E) = 2,
}

fn main() -> i32 {
    let value = Result.ok(1);
    return 0;
}
